Added proxmox ability to submit a bash script that runs on first-boot
* Added shebang for reliability

* Initial Proxmox functionality

* Fixed CIMC mount on some versions due to missing /

* Black Formatting

* Added proxmox ability to submit a bash script that runs on first-boot

---------
